Add employee functionality

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
         <div>
           <ul class="collection-employee">
-            <li class="eployee-item">Mohcin <a href="#" class="button delete-employee">x</a></li>
+            <!-- <li class="eployee-item">Mohcin <a href="#" class="button delete-employee">x</a></li> -->
           </ul>
 
-          <a href="#" class="button delete-all">Remove all</a>
+          <a class="button delete-all">Remove all</a>
         </div>
     </div>
 
